Ajustes menores